# mate-accountsservice

./: AUTHORS  Makefile.in  README.md  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac
data/: Makefile.am  Makefile.in  mateaccounts-daemon.service.in  org.freedesktop.MateAccounts.User.xml  org.freedesktop.MateAccounts.conf  org.freedesktop.MateAccounts.service.in  org.freedesktop.MateAccounts.xml  org.freedesktop.mateaccounts.policy.in
doc/: Makefile.in
doc/dbus/: Makefile.am  Makefile.in  MateAccountsService.xml  MateAccountsService.xml.in  org.freedesktop.MateAccounts.User.ref.xml  org.freedesktop.MateAccounts.ref.xml
po/: POTFILES.in  ar.po  bg_BG.po  bn_IN.po  ca.po  ca@valencia.po  cs.po  de.po  el.po  eo.po  es.po  fa_IR.po  fr.po  ga.po  hi.po  hu.po  id.po  it.po  kk.po  ko.po  pa.po  pl.po  ru.po  sk.po  sl.po  sr.po  sr@latin.po  sv.po  tr.po  uk.po  vi.po  wa.po  zh_CN.po  zh_TW.po
src/: Makefile.am  Makefile.in  daemon-glue.h  daemon.c  main.c  user-glue.h  user.c  user.h
src/libmateaccountsservice/: Makefile.am  Makefile.in  act-user-enum-types.c  act-user-enum-types.h  act-user-manager.c  act-user-manager.h  act-user-private.h  act-user.c  act-user.h  mateaccountsservice.pc  mateaccountsservice.pc.in
